--- a/TP_MAC/DIMO/view/home page.html
+++ b/TP_MAC/DIMO/view/home page.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <title>Dimo inscription</title>
 </head>
-<body>
-$END$
+<body class="body" style="margin: 0;">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+<nav class="navbar navbar-light" style="background-color: rgba(34, 188, 102, 1); width: 100%; max-width: 100%; margin:0 auto; height: auto;">
+    <a class="navbar-brand" href="https://www.dimo-diagnostic.net/"><img class="dimo-logo" style="margin: auto; width: 69px" src="/images/Logo.png"></a>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">inscription</button>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">connexion</button>
+</nav>
+
+
+
 </body>
 </html>
